# openelp

./: .dockerignore  .gitattributes  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_Docker.md  TODO  TODO.md
.github/workflows/: ci.yaml  release.yaml
cmake/: BundlePCRE.cmake  Package.cmake  pcre2_cmp0026.patch  pcre2_include_path.patch  unix2dos.cmake
doc/: CMakeLists.txt  Doxyfile.in  ELProxy.conf  hhc.cmd  hhc.cmd.in  openelp.service  openelp.service.in  openelp.xml  openelpd.1
doc/icons/: CMakeLists.txt
include/: CMakeLists.txt  conf.h  conn.h  conn_wsa_errno.h  digest.h  log.h  log_eventlog.h  log_syslog.h  mutex.h  pearson.h  proxy_client.h  proxy_conn.h  proxy_msg.h  rand.h  regex.h  registration.h  thread.h  worker.h
include/openelp/: openelp.h
package/: CMakeLists.txt
src/: CMakeLists.txt  conf.c  conf.h  conn.c  conn.h  conn_wsa_errno.c  digest.c  digest.h  log.c  log.h  log_eventlog_messages.mc  log_syslog.h  mutex.h  mutex_posix.c  mutex_win.c  pearson.c  proxy.c  proxy_client.c  proxy_conn.c  proxyd.c  rand.c  rand.h  regex.c  registration.c  service.c  thread.h  thread_posix.c  thread_win.c  version.rc  worker.c
test/: CMakeLists.txt  test_conn.c  test_digest.c  test_e2e.c  test_md5.c  test_proxy.c  test_regex.c
